Ftm 205 be update to java 21 (#78)
* Change image to Java 21

* Optimize size of Docker image by jlink

* Add custom user to Dockerfile

* Replace main command to ENTRYPOINT

* Reduce image of Docker by use jdeps tools

* Remove unused code

* Add docker arguments for Java and Maven version

* Change to https

* Repair COPY command from Dockerfile

* Remove old pipeline to Heroku deploy

* Update pipeline maven -> build

Java 17 -> 21
checkout v2 -> v4
setup-java v2 ->v4

* Update Java version to 21 in pom